4ºANO/PLC_GCS/Ficha/src/main/java/gestaoParser.java
// Generated from C:/Users/Gonçalo Pinto/Documents/@Goncalo/Universidade/4ºANO/1Semestre/PLC_Gramáticas na Compreensão de Software/Fichas de Exercícios para as Aulas/Ficha01\gestao.g4 by ANTLR 4.9

    import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class gestaoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, STR=9, 
		ID=10, NUM=11, HIFEN=12, PONTO=13, WS=14;
	public static final int
		RULE_gestao = 0, RULE_stock = 1, RULE_produto = 2, RULE_faturas = 3, RULE_fatura = 4, 
		RULE_cabecalho = 5, RULE_numFat = 6, RULE_fornecedor = 7, RULE_cliente = 8, 
		RULE_nome = 9, RULE_nif = 10, RULE_morada = 11, RULE_nib = 12, RULE_corpo = 13, 
		RULE_linha = 14, RULE_refProd = 15, RULE_valUnit = 16, RULE_quant = 17, 
		RULE_descProd = 18, RULE_quantS = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"gestao", "stock", "produto", "faturas", "fatura", "cabecalho", "numFat", 
			"fornecedor", "cliente", "nome", "nif", "morada", "nib", "corpo", "linha", 
			"refProd", "valUnit", "quant", "descProd", "quantS"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'STOCK'", "':'", "','", "'FATURA'", "'VENDAS'", "'/'", 
			"'|'", null, null, null, "'-'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "STR", "ID", "NUM", 
			"HIFEN", "PONTO", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gestao.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    class Produto{
	        String descr;
	        Double prec;
	        int qtd;
	           
	        public String toString(){
	            StringBuffer sb = new StringBuffer();
	            sb.append(this.descr + "; ");
	            sb.append(this.prec + "; ");
	            sb.append(this.qtd + ". ");
	            return sb.toString();
	        }
	    }

	public gestaoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class GestaoContext extends ParserRuleContext {
		public StockContext stock;
		public StockContext stock() {
			return getRuleContext(StockContext.class,0);
		}
		public FaturasContext faturas() {
			return getRuleContext(FaturasContext.class,0);
		}
		public GestaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gestao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gestaoListener ) ((gestaoListener)listener).enterGestao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gestaoListener ) ((gestaoListener)listener).exitGestao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gestaoVisitor ) return ((gestaoVisitor<? extends T>)visitor).visitGestao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GestaoContext gestao() throws RecognitionException {
		GestaoContext _localctx = new GestaoContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_gestao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			((GestaoContext)_localctx).stock = stock();
			setState(41);
			match(T__0);
			setState(42);
			match(T__0);
			setState(43);
			faturas(((GestaoContext)_localctx).stock.prodts);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StockContext extends ParserRuleContext {
		public HashMap<String, Produto> prodts;
		public ProdutoContext p1;
		public ProdutoContext p2;
		public List<ProdutoContext> produto() {
			return getRuleContexts(ProdutoContext.class);
		}
		public ProdutoContext produto(int i) {
			return getRuleContext(ProdutoContext.class,i);
		}
		public StockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gestaoListener ) ((gestaoListener)listener).enterStock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gestaoListener ) ((gestaoListener)listener).exitStock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gestaoVisitor ) return ((gestaoVisitor<? extends T>)visitor).visitStock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StockContext stock() throws RecognitionException {
		StockContext _localctx = new StockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stock);
		((StockContext)_localctx).prodts =  new HashMap<String, Produto>(); 
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			match(T__1);
			setState(46);
			((StockContext)_localctx).p1 = produto(_localctx.prodts);
			 ((StockContext)_localctx).prodts = ((StockContext)_localctx).p1.prodout; 
			setState(54);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(48);
					match(T__0);
					setState(49);
					((StockContext)_localctx).p2 = produto(_localctx.prodts);
					 ((StockContext)_localctx).prodts = ((StockContext)_localctx).p2.prodout; 
					}
					} 
				}
				setState(56);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			 System.out.println("Quantidades em Stock no inicio:"); System.out.println(_localctx.prodts.toString()); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProdutoContext extends ParserRuleContext {
		public HashMap<String, Produto> prodin;
		public HashMap<String, Produto> prodout;
		public RefProdContext refProd;
		public DescProdContext descProd;
		public ValUnitContext valUnit;
		public QuantSContext quantS;
		public RefProdContext refProd() {
			return getRuleContext(RefProdContext.class,0);
		}
		public DescProdContext descProd() {
			return getRuleContext(DescProdContext.class,0);
		}
		public ValUnitContext valUnit() {
			return getRuleContext(ValUnitContext.class,0);
		}
		public QuantSContext quantS() {
			return getRuleContext(QuantSContext.class,0);
		}
		public ProdutoContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ProdutoContext(ParserRuleContext parent, int invokingState, HashMap<String, Produto> prodin) {
			super(parent, invokingState);
			this.prodin = prodin;
		}
		@Override public int getRuleIndex() { return RULE_produto; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gestaoListener ) ((gestaoListener)listener).enterProduto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gestaoListener ) ((gestaoListener)listener).exitProduto(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gestaoVisitor ) return ((gestaoVisitor<? extends T>)visitor).visitProduto(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProdutoContext produto(HashMap<String, Produto> prodin) throws RecognitionException {
		ProdutoContext _localctx = new ProdutoContext(_ctx, getState(), prodin);
		enterRule(_localctx, 4, RULE_produto);
		((ProdutoContext)_localctx).prodout =  new HashMap<String, Produto>(); 
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			((ProdutoContext)_localctx).refProd = refProd();
			setState(60);
			match(T__2);
			setState(61);
			((ProdutoContext)_localctx).descProd = descProd();
			setState(62);
			match(T__3);
			setState(63);
			((ProdutoContext)_localctx).valUnit = valUnit();
			setState(64);
			match(T__3);
			setState(65);
			((ProdutoContext)_localctx).quantS = quantS();
			   
			                                                        Produto p = new Produto(); 
			                                                        p.descr=(((ProdutoContext)_localctx).descProd!=null?_input.getText(((ProdutoContext)_localctx).descProd.start,((ProdutoContext)_localctx).descProd.stop):null);
			                                                        p.prec=Double.parseDouble((((ProdutoContext)_localctx).valUnit!=null?_input.getText(((ProdutoContext)_localctx).valUnit.start,((ProdutoContext)_localctx).valUnit.stop):null));
			                                                        p.qtd=Integer.parseInt((((ProdutoContext)_localctx).quantS!=null?_input.getText(((ProdutoContext)_localctx).quantS.start,((ProdutoContext)_localctx).quantS.stop):null));
			                                                        _localctx.prodin.put((((ProdutoContext)_localctx).refProd!=null?_input.getText(((ProdutoContext)_localctx).refProd.start,((ProdutoContext)_localctx).refProd.stop):null), p);
			                                                        ((ProdutoContext)_localctx).prodout = _localctx.prodin;
			                                                    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FaturasContext extends ParserRuleContext {
		public HashMap<String, Produto> prodts;
		public FaturaContext f1;
		public FaturaContext f2;
		public List<FaturaContext> fatura() {
			return getRuleContexts(FaturaContext.class);
		}
		public FaturaContext fatura(int i) {
			return getRuleContext(FaturaContext.class,i);
		}
		public FaturasContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public FaturasContext(ParserRuleContext parent, int invokingState, HashMap<String, Produto> prodts) {
			super(parent, invokingState);
			this.prodts = prodts;
		}
		@Override public int getRuleIndex() { return RULE_faturas; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gestaoListener ) ((gestaoListener)listener).enterFaturas(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gestaoListener ) ((gestaoListener)listener).exitFaturas(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gestaoVisitor ) return ((gestaoVisitor<? extends T>)visitor).visitFaturas(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FaturasContext faturas(HashMap<String, Produto> prodts) throws RecognitionException {
		FaturasContext _localctx = new FaturasContext(_ctx, getState(), prodts);
		enterRule(_localctx, 6, RULE_faturas);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

			    System.out.println("Quantidades em Stock no meio:"); System.out.println(_localctx.prodts.toString());
			    
			setState(69);
			((FaturasContext)_localctx).f1 = fatura(_localctx.prodts);
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(70);
				match(T__0);
				setState(71);
				((FaturasContext)_localctx).f2 = fatura(_localctx.prodts);
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			 System.out.println("Quantidades em Stock no fim:"); 
			      System.out.println(_localctx.prodts.toString());
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FaturaContext extends ParserRuleContext {
		public HashMap<String, Produto> prodin;
		public CorpoContext corpo;
		public CabecalhoContext cabecalho() {
			return getRuleContext(CabecalhoContext.class,0);
		}
		public CorpoContext corpo() {
			return getRuleContext(CorpoContext.class,0);
		}
		public TerminalNode PONTO() { return getToken(gestaoParser.PONTO, 0); }
		public FaturaContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public FaturaContext(ParserRuleContext parent, int invokingState, HashMap<String, Produto> prodin) {
			super(parent, invokingState);
			this.prodin = prodin;
		}
		@Override public int getRuleIndex() { return RULE_fatura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gestaoListener ) ((gestaoListener)listener).enterFatura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gestaoListener ) ((gestaoListener)listener).exitFatura(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gestaoVisitor ) return ((gestaoVisitor<? extends T>)visitor).visitFatura(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FaturaContext fatura(HashMap<String, Produto> prodin) throws RecognitionException {
		FaturaContext _localctx = new FaturaContext(_ctx, getState(), prodin);
		enterRule(_localctx, 8, RULE_fatura);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(T__4);
			setState(80);
			cabecalho();
			setState(81);
			match(T__5);
			setState(82);
			((FaturaContext)_localctx).corpo = corpo(_localctx.prodin);
			setState(83);
			match(PONTO);
			System.out.println("TOTAL da Fatura: "+ ((FaturaContext)_localctx).corpo.totF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CabecalhoContext extends ParserRuleContext {
		public NumFatContext numFat;
		public NumFatContext numFat() {
			return getRuleContext(NumFatContext.class,0);
		}
		public FornecedorContext fornecedor() {
			return getRuleContext(FornecedorContext.class,0);
		}
		public ClienteContext cliente() {
			return getRuleContext(ClienteContext.class,0);
		}
		public CabecalhoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cabecalho; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gestaoListener ) ((gestaoListener)listener).enterCabecalho(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gestaoListener ) ((gestaoListener)listener).exitCabecalho(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gestaoVisitor ) return ((gestaoVisitor<? extends T>)visitor).visitCabecalho(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CabecalhoContext cabecalho() throws RecognitionException {
		CabecalhoContext _localctx = new CabecalhoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cabecalho);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			((CabecalhoContext)_localctx).numFat = numFat();
			setState(87);
			match(T__2);
			setState(88);
			fornecedor();
			setState(89);
			match(T__6);
			setState(90);
			cliente();
			 System.out.println("FATURA num: " + (((CabecalhoContext)_localctx).numFat!=null?_input.getText(((CabecalhoContext)_localctx).numFat.start,((CabecalhoContext)_localctx).numFat.stop):null));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumFatContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(gestaoParser.ID, 0); }
		public NumFatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numFat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gestaoListener ) ((gestaoListener)listener).enterNumFat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gestaoListener ) ((gestaoListener)listener).exitNumFat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gestaoVisitor ) return ((gestaoVisitor<? extends T>)visitor).visitNumFat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumFatContext numFat() throws RecognitionException {
		NumFatContext _localctx = new NumFatContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_numFat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FornecedorContext extends ParserRuleContext {
		public NomeContext nome() {
			return getRuleContext(NomeContext.class,0);
		}
		public MoradaContext morada() {
			return getRuleContext(MoradaContext.class,0);
		}
		public NifContext nif() {
			return getRuleContext(NifContext.class,0);
		}
		public NibContext nib() {
			return getRuleContext(NibContext.class,0);
		}
		public FornecedorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fornecedor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gestaoListener ) ((gestaoListener)listener).enterFornecedor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gestaoListener ) ((gestaoListener)listener).exitFornecedor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gestaoVisitor ) return ((gestaoVisitor<? extends T>)visitor).visitFornecedor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FornecedorContext fornecedor() throws RecognitionException {
		FornecedorContext _localctx = new FornecedorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_fornecedor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			nome();
			setState(96);
			match(T__2);
			setState(97);
			morada();
			setState(98);
			match(T__3);
			setState(99);
			nif();
			setState(100);
			match(T__3);
			setState(101);
			nib();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClienteContext extends ParserRuleContext {
		public NomeContext nome() {
			return getRuleContext(NomeContext.class,0);
		}
		public MoradaContext morada() {
			return getRuleContext(MoradaContext.class,0);
		}
		public NifContext nif() {
			return getRuleContext(NifContext.class,0);
		}
		public ClienteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cliente; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gestaoListener ) ((gestaoListener)listener).enterCliente(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gestaoListener ) ((gestaoListener)listener).exitCliente(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gestaoVisitor ) return ((gestaoVisitor<? extends T>)visitor).visitCliente(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClienteContext cliente() throws RecognitionException {
		ClienteContext _localctx = new ClienteContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_cliente);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			nome();
			setState(104);
			match(T__2);
			setState(105);
			morada();
			setState(106);
			match(T__3);
			setState(107);
			nif();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NomeContext extends ParserRuleContext {
		public TerminalNode STR() { return getToken(gestaoParser.STR, 0); }
		public NomeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nome; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gestaoListener ) ((gestaoListener)listener).enterNome(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gestaoListener ) ((gestaoListener)listener).exitNome(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gestaoVisitor ) return ((gestaoVisitor<? extends T>)visitor).visitNome(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NomeContext nome() throws RecognitionException {
		NomeContext _localctx = new NomeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_nome);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(STR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NifContext extends ParserRuleContext {
		public TerminalNode STR() { return getToken(gestaoParser.STR, 0); }
		public NifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nif; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gestaoListener ) ((gestaoListener)listener).enterNif(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gestaoListener ) ((gestaoListener)listener).exitNif(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gestaoVisitor ) return ((gestaoVisitor<? extends T>)visitor).visitNif(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NifContext nif() throws RecognitionException {
		NifContext _localctx = new NifContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_nif);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(STR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MoradaContext extends ParserRuleContext {
		public TerminalNode STR() { return getToken(gestaoParser.STR, 0); }
		public MoradaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_morada; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gestaoListener ) ((gestaoListener)listener).enterMorada(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gestaoListener ) ((gestaoListener)listener).exitMorada(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gestaoVisitor ) return ((gestaoVisitor<? extends T>)visitor).visitMorada(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MoradaContext morada() throws RecognitionException {
		MoradaContext _localctx = new MoradaContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_morada);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(STR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NibContext extends ParserRuleContext {
		public TerminalNode STR() { return getToken(gestaoParser.STR, 0); }
		public NibContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nib; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gestaoListener ) ((gestaoListener)listener).enterNib(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gestaoListener ) ((gestaoListener)listener).exitNib(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gestaoVisitor ) return ((gestaoVisitor<? extends T>)visitor).visitNib(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NibContext nib() throws RecognitionException {
		NibContext _localctx = new NibContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_nib);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(STR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
